# christmas-kata

./: .gitignore  CMakeLists.txt  README.md  build.sh  custom_build.sh  main
include/: CMakeLists.txt  doctest.h
libs/: CMakeLists.txt
libs/brightness_control/: CMakeLists.txt
libs/brightness_control/include/: brightness_control.h
libs/brightness_control/src/: brightness_control.cpp
libs/brightness_control/test/: brightness_control_test.cpp
libs/i_lights_control/: CMakeLists.txt
libs/i_lights_control/include/: i_lights_control.h
libs/lights_control/: CMakeLists.txt
libs/lights_control/include/: lights_control.h
libs/lights_control/src/: lights_control.cpp
libs/lights_control/test/: lights_control_test.cpp
libs/multiply/include/: multiply.h
libs/multiply/src/: multiply.cpp
libs/multiply/test/: multiply_test.cpp
src/: CMakeLists.txt  all_tests.cpp  main.cpp  main.h  string.cpp  string.h
src/exe/: CMakeLists.txt  main.cpp
src/lights_control/include/: lights_control.h
src/lights_control/src/: lights_control.cpp
src/lights_control/test/: lights_control_test.cpp
src/multiply/: CMakeLists.txt
